--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="head.js"></script>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> AGt Url shortner</title>
+    <title> Agurl url shortner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Your Own URL Shortener which doesn't need a server">
     <meta name="author" content="Anurag singh">
@@ -35,7 +35,7 @@
         </div>
         <footer class="infos">
            <p class="small-text" style="color:grey;">Please Don't Shorten Sensitive Information With AGt! We are not
-                responsible for any damage made using AGt </p>
+                responsible for any damage made using AGurl </p>
           <br>
 			
 			  
@@ -49,7 +49,7 @@
 		</footer>
   </div>
   <br>
-  <a href="">  <img src="https://www.flaticon.com/svg/vstatic/svg/145/145802.svg?token=exp=1619467860~hmac=48b09a59a44207041898285c5eb68c43" width="50p"></a>
+  <a href="">buy me a coffee</a>
 
     <script src="index.js"></script>
 </body>
