--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="head.js"></script>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> Agurl url shortner</title>
+    <title> AGt Url shortner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Your Own URL Shortener which doesn't need a server">
     <meta name="author" content="Anurag singh">
@@ -14,7 +14,9 @@
 </head>
 
 <body >
-
+	  
+  
+  
     <div class="main" style="margin-top:70px;">
 
         <header>
@@ -25,7 +27,7 @@
             <div>
                 <input type="text" maxlength=20 id="custominput" placeholder="Custom URL">
                 <p id="erbox" style="color:red;"></p>
-            </div>
+            </div>"
             <button id="sbtn" type="button" class="btn btn-dark"> 🔗 Shorten Me</button>
         </div>
         <br>
@@ -34,13 +36,13 @@
             <p id="sucess" style="color:cyan"></p>
         </div>
         <footer class="infos">
-           <p class="small-text" style="color:grey;">Please Don't Shorten Sensitive Information With AGt! We are not
-                responsible for any damage made using AGurl </p>
+           <p class="small-text" style="color:grey;">Please Don't Shorten Sensitive Information With agurl! We are not
+                responsible for any damage made using agurl </p>
           <br>
 			
 			  
 				<!--<a class="small-text" href="https://github.com/anurag989/altcoder"> ⚠️ Report</a>-->
-            <p><strong> Handcrafted with ❤ by
+            <p style="margin-bottom:0px;"><strong> Handcrafted with ❤ by
                     <a href="https://altcoder.cf/">anurag singh</a></strong>
             </p>
        
@@ -49,7 +51,7 @@
 		</footer>
   </div>
   <br>
-  <a href="">buy me a coffee</a>
+  
 
     <script src="index.js"></script>
 </body>
