--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="head.js"></script>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> AGt Url shortner</title>
+    <title> agurl url shortner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Your Own URL Shortener which doesn't need a server">
     <meta name="author" content="Anurag singh">
