--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="head.js"></script>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> agurl url shortner</title>
+    <title> AGt Url shortner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Your Own URL Shortener which doesn't need a server">
     <meta name="author" content="Anurag singh">
@@ -27,13 +27,13 @@
             <div>
                 <input type="text" maxlength=20 id="custominput" placeholder="Custom URL">
                 <p id="erbox" style="color:red;"></p>
-            </div>"
+            </div>
             <button id="sbtn" type="button" class="btn btn-dark"> 🔗 Shorten Me</button>
         </div>
         <br>
         <div class="form1" style="margin-bottom : 0px !important;">
             <input type="text" id="shortenedURL" placeholder="Your Short Url Shown here">
-            <p id="sucess" style="color:cyan"></p>
+            <p id="sucess" style="color:black"></p>
         </div>
         <footer class="infos">
            <p class="small-text" style="color:grey;">Please Don't Shorten Sensitive Information With agurl! We are not
